--- a/styles/index.css
+++ b/styles/index.css
@@ -105,6 +105,7 @@ min-height: 200px;
 max-width: fit-content;
 margin: auto;
 padding: 2rem;
+background-color: aquamarine;
 
 display: flex;
 flex-direction: column;
@@ -162,3 +163,4 @@ background-color: lightblue;
 .snowy {
 background-color: lightsteelblue;
 }
+
