--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 h2 {
     margin: 0 auto 2rem auto;
+    color: #5182a5;
 }
   
 body {
@@ -10,7 +11,7 @@ grid-gap: 1rem;
 
 font-family: "Rubik", sans-serif;
 font-size: 18px;
-background-color: #1b69f9;
+background-color: #96B6C5;
 margin: 2rem;
 }
 
@@ -42,7 +43,7 @@ content: "✨";
 .city-name__section {
 border-radius: 8px;
 padding: 2rem;
-background-color: white;
+background-color: #F1F0E8;
 }
 
 .temperature__section {
@@ -50,7 +51,7 @@ grid-row: 2;
 }
 
 .temperature__section button {
-    background-color: #1b69f9;
+    background-color: #5182a5;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -105,7 +106,7 @@ min-height: 200px;
 max-width: fit-content;
 margin: auto;
 padding: 2rem;
-background-color: aquamarine;
+background-color: #F1F0E8;
 
 display: flex;
 flex-direction: column;
@@ -117,7 +118,7 @@ font-size: 2em;
 
 .city-name__reset-btn {
 border: 0;
-background-color: #1655cc;
+background-color: #5182a5;
 color: white;
 border-radius: 8px;
 padding: 1rem;
